--- a/styles.css
+++ b/styles.css
@@ -1,72 +1,74 @@
 @import url("https://fonts.googleapis.com/css?family=Sansita:400,700,800,900");
-/* line 3, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 body {
   text-align: center;
   font-family: 'Sansita', sans-serif;
   background-color: #3a8bc2;
-  margin: 0; }
-  /* line 8, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+  margin: 0;
+}
+body main {
+  margin: 0 auto;
+  margin-top: 10px;
+  padding: 20px;
+  width: 800px;
+  box-shadow: 0px 0px 10px black;
+  transition: width 1s;
+  -webkit-transition: width 1s;
+  border-radius: 10px;
+  background: #ECE9E6;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #ECE9E6, #FFFFFF);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #ECE9E6, #FFFFFF);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+@media (max-width: 842px) {
   body main {
-    margin: 0 auto;
-    margin-top: 10px;
-    padding: 20px;
-    width: 800px;
-    box-shadow: 0px 0px 10px black;
-    transition: all 1s;
-    -webkit-transition: all 1s;
-    border-radius: 10px;
-    background: #ECE9E6;
-    /* fallback for old browsers */
-    background: -webkit-linear-gradient(to left, #ECE9E6, #FFFFFF);
-    /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to left, #ECE9E6, #FFFFFF);
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ }
-    @media (max-width: 842px) {
-      /* line 8, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
-      body main {
-        width: 300px; } }
-  /* line 26, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+    width: 300px;
+  }
+}
+body main h1 {
+  font-size: 100px;
+  text-shadow: 0px 1px 0px #999, 0px 2px 0px #888, 0px 3px 0px #777, 0px 4px 0px #666, 0px 5px 0px #555, 0px 6px 0px #444, 0px 7px 0px #333, 0px 8px 7px #001135;
+  margin: 0;
+  transition: all 1s;
+  -webkit-transition: all 1s;
+}
+@media (max-width: 842px) {
   body main h1 {
-    font-size: 100px;
-    text-shadow: 0px 1px 0px #999, 0px 2px 0px #888, 0px 3px 0px #777, 0px 4px 0px #666, 0px 5px 0px #555, 0px 6px 0px #444, 0px 7px 0px #333, 0px 8px 7px #001135;
-    margin: 0;
-    transition: all 1s;
-    -webkit-transition: all 1s; }
-    @media (max-width: 842px) {
-      /* line 26, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
-      body main h1 {
-        font-size: 40px; } }
+    font-size: 40px;
+  }
+}
 
-/* line 38, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 h2 {
   font-size: 40px;
   margin: 10px;
   transition: all 1s;
-  -webkit-transition: all 1s; }
-  @media (max-width: 842px) {
-    /* line 38, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
-    h2 {
-      font-size: 18px; } }
+  -webkit-transition: all 1s;
+}
+@media (max-width: 842px) {
+  h2 {
+    font-size: 18px;
+  }
+}
 
-/* line 48, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 .left-border {
   border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px; }
+  border-bottom-left-radius: 10px;
+}
 
-/* line 53, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 .right-border {
   border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px; }
+  border-bottom-right-radius: 10px;
+}
 
-/* line 58, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 .clock-controls {
   margin: 0 auto;
   display: flex;
   width: 100%;
   flex-direction: row;
-  justify-content: space-around; }
+  justify-content: space-around;
+}
 
-/* line 66, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 .btn-container {
   display: flex;
   flex-direction: row;
@@ -74,39 +76,41 @@ h2 {
   margin: 0 auto;
   width: 200px;
   transition: all 1s;
-  -webkit-transition: all 1s; }
-  @media (max-width: 842px) {
-    /* line 66, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
-    .btn-container {
-      width: 100px; } }
-  /* line 77, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+  -webkit-transition: all 1s;
+}
+@media (max-width: 842px) {
+  .btn-container {
+    width: 100px;
+  }
+}
+.btn-container input {
+  font-size: 44px;
+  text-align: center;
+  width: 80%;
+  height: 48px;
+  margin: 0;
+  border: none;
+  background-color: #606060;
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#7d7e7d+0,565656+100,7c7c7c+100 */
+  background: -moz-linear-gradient(top, #7d7e7d 0%, #565656 100%, #7c7c7c 100%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #7d7e7d 0%, #565656 100%, #7c7c7c 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #7d7e7d 0%, #565656 100%, #7c7c7c 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  color: white;
+  pointer-events: none;
+  transition: all 1s;
+  -webkit-transition: all 1s;
+}
+@media (max-width: 842px) {
   .btn-container input {
-    font-size: 44px;
-    text-align: center;
-    width: 80%;
-    height: 48px;
-    margin: 0;
-    border: none;
-    background-color: #606060;
-    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#7d7e7d+0,565656+100,7c7c7c+100 */
-    background: -moz-linear-gradient(top, #7d7e7d 0%, #565656 100%, #7c7c7c 100%);
-    /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, #7d7e7d 0%, #565656 100%, #7c7c7c 100%);
-    /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, #7d7e7d 0%, #565656 100%, #7c7c7c 100%);
-    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    color: white;
-    pointer-events: none;
-    transition: all 1s;
-    -webkit-transition: all 1s; }
-    @media (max-width: 842px) {
-      /* line 77, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
-      .btn-container input {
-        width: 50%;
-        height: 38px;
-        font-size: 22px; } }
+    width: 50%;
+    height: 38px;
+    font-size: 22px;
+  }
+}
 
-/* line 104, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 .control-btns {
   background-color: #28262f;
   color: white;
@@ -115,51 +119,94 @@ h2 {
   height: 50px;
   border: none;
   transition: all 1s;
-  -webkit-transition: all 1s; }
-  /* line 111, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
-  .control-btns:hover {
-    cursor: pointer; }
-  /* line 114, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
-  .control-btns:focus {
-    outline: none; }
-  @media (max-width: 842px) {
-    /* line 104, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
-    .control-btns {
-      width: 40px;
-      height: 40px;
-      font-size: 15px; } }
+  -webkit-transition: all 1s;
+}
+.control-btns:hover {
+  cursor: pointer;
+}
+.control-btns:focus {
+  outline: none;
+}
+@media (max-width: 842px) {
+  .control-btns {
+    width: 40px;
+    height: 40px;
+    font-size: 15px;
+  }
+}
 
-/* line 126, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+#master-btns {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
 #timer-toggle {
   background-color: #28262f;
   color: white;
   font-size: 50px;
-  width: 90%;
+  width: 60%;
   height: 80px;
   border: none;
   border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
+  border-right: solid 1px #151515;
   border-bottom: 5px solid #161616;
   text-shadow: 0px -2px #161616;
   transition: all 1s;
-  -webkit-transition: all 1s; }
-  /* line 137, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
-  #timer-toggle:hover {
-    cursor: pointer; }
-  /* line 140, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
-  #timer-toggle:focus {
-    outline: none; }
-  /* line 143, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
-  #timer-toggle:active {
-    transform: translate(0px, 0px);
-    -webkit-transform: translate(0px, 0px);
-    border-bottom: 0px solid; }
-  @media (max-width: 842px) {
-    /* line 126, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
-    #timer-toggle {
-      font-size: 25px; } }
+  -webkit-transition: all 1s;
+  transition: transform 0.1s;
+  -webkit-transition: -webkit-transform 0.1s;
+}
+#timer-toggle:hover {
+  cursor: pointer;
+}
+#timer-toggle:focus {
+  outline: none;
+}
+#timer-toggle:active {
+  transform: translate(0px, 0px);
+  -webkit-transform: translate(0px, 0px);
+  border-bottom: 0px solid;
+}
+@media (max-width: 842px) {
+  #timer-toggle {
+    font-size: 25px;
+  }
+}
 
-/* line 155, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+#timer-reset {
+  background-color: #28262f;
+  color: white;
+  font-size: 50px;
+  width: 30%;
+  height: 80px;
+  border: none;
+  border-bottom-right-radius: 10px;
+  border-left: solid 1px #151515;
+  border-bottom: 5px solid #161616;
+  text-shadow: 0px -2px #161616;
+  transition: all 1s;
+  -webkit-transition: all 1s;
+  transition: transform 0.1s;
+  -webkit-transition: -webkit-transform 0.1s;
+}
+#timer-reset:hover {
+  cursor: pointer;
+}
+#timer-reset:focus {
+  outline: none;
+}
+#timer-reset:active {
+  transform: translate(0px, 0px);
+  -webkit-transform: translate(0px, 0px);
+  border-bottom: 0px solid;
+}
+@media (max-width: 842px) {
+  #timer-reset {
+    font-size: 25px;
+  }
+}
+
 #clock-container {
   width: 90%;
   margin: 0 auto;
@@ -176,51 +223,50 @@ h2 {
   background: linear-gradient(to bottom, #cedbe9 0%, #aac5de 17%, #6199c7 50%, #3a84c3 51%, #419ad6 59%, #4bb8f0 71%, #3a8bc2 84%, #26558b 100%);
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cedbe9', endColorstr='#26558b', GradientType=0);
-  /* IE6-9 */ }
-  /* line 172, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+  /* IE6-9 */
+}
+#clock-container h1 {
+  font-size: 120px;
+  text-shadow: none;
+  color: rgba(45, 45, 45, 0.9);
+  transition: all 1s;
+  -webkit-transition: all 1s;
+}
+@media (max-width: 842px) {
   #clock-container h1 {
-    font-size: 120px;
-    text-shadow: none;
-    color: rgba(45, 45, 45, 0.9);
-    transition: all 1s;
-    -webkit-transition: all 1s; }
-    @media (max-width: 842px) {
-      /* line 172, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
-      #clock-container h1 {
-        font-size: 60px; } }
-  /* line 182, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
-  #clock-container p {
-    margin: 0;
-    font-size: 20px;
-    color: rgba(45, 45, 45, 0.9); }
-
-.fa-3x {
-    transition: all 1s;
-    -webkit-transition: all 1s;
+    font-size: 60px;
+  }
+}
+#clock-container p {
+  margin: 0;
+  font-size: 20px;
+  color: rgba(45, 45, 45, 0.9);
 }
 
+.fa-3x {
+  transition: all 1s;
+  -webkit-transition: all 1s;
+}
 @media (max-width: 842px) {
-            .fa-3x {
-                font-size: 2em;
-            }
-        }
+  .fa-3x {
+    font-size: 2em;
+  }
+}
 
-/* line 189, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 .animate {
-  transition: all 0.1s;
-  -webkit-transition: all 0.1s; }
+  transition: transform 0.1s;
+  -webkit-transition: -webkit-transform 0.1s;
+}
 
-/* line 194, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 .black {
   background-color: #28262f;
   border-bottom: 5px solid #161616;
-  text-shadow: 0px -2px #161616; }
+  text-shadow: 0px -2px #161616;
+}
 
-/* line 201, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 .active,
 button:active {
   transform: translate(0px, 0px);
   -webkit-transform: translate(0px, 0px);
-  border-bottom: 0px solid; }
-
-/*# sourceMappingURL=styles.css.map */
+  border-bottom: 0px solid;
+}
