--- a/styles.css
+++ b/styles.css
@@ -1,272 +1,392 @@
 @import url("https://fonts.googleapis.com/css?family=Sansita:400,700,800,900");
+
+/* line 3, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+
 body {
-  text-align: center;
-  font-family: 'Sansita', sans-serif;
-  background-color: #3a8bc2;
-  margin: 0;
+    text-align: center;
+    font-family: 'Sansita', sans-serif;
+    background-color: #3a8bc2;
+    margin: 0;
 }
+
+
+/* line 8, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+
 body main {
-  margin: 0 auto;
-  margin-top: 10px;
-  padding: 20px;
-  width: 800px;
-  box-shadow: 0px 0px 10px black;
-  transition: width 1s;
-  -webkit-transition: width 1s;
-  border-radius: 10px;
-  background: #ECE9E6;
-  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to left, #ECE9E6, #FFFFFF);
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to left, #ECE9E6, #FFFFFF);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    margin: 0 auto;
+    margin-top: 10px;
+    padding: 20px;
+    width: 800px;
+    box-shadow: 0px 0px 10px black;
+    transition: width 1s;
+    -webkit-transition: width 1s;
+    border-radius: 10px;
+    background: #ECE9E6;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to left, #ECE9E6, #FFFFFF);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to left, #ECE9E6, #FFFFFF);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
+
 @media (max-width: 842px) {
-  body main {
-    width: 300px;
-  }
+    /* line 8, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+    body main {
+        width: 300px;
+    }
 }
+
+
+/* line 27, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+
 body main h1 {
-  font-size: 100px;
-  text-shadow: 0px 1px 0px #999, 0px 2px 0px #888, 0px 3px 0px #777, 0px 4px 0px #666, 0px 5px 0px #555, 0px 6px 0px #444, 0px 7px 0px #333, 0px 8px 7px #001135;
-  margin: 0;
-  transition: all 1s;
-  -webkit-transition: all 1s;
+    font-size: 100px;
+    text-shadow: 0px 1px 0px #999, 0px 2px 0px #888, 0px 3px 0px #777, 0px 4px 0px #666, 0px 5px 0px #555, 0px 6px 0px #444, 0px 7px 0px #333, 0px 8px 7px #001135;
+    margin: 0;
+    transition: all 1s;
+    -webkit-transition: all 1s;
 }
+
 @media (max-width: 842px) {
-  body main h1 {
-    font-size: 40px;
-  }
+    /* line 27, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+    body main h1 {
+        font-size: 40px;
+    }
 }
+
+
+/* line 39, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 
 h2 {
-  font-size: 40px;
-  margin: 10px;
-  transition: all 1s;
-  -webkit-transition: all 1s;
+    font-size: 40px;
+    margin: 10px;
+    transition: all 1s;
+    -webkit-transition: all 1s;
 }
+
 @media (max-width: 842px) {
-  h2 {
-    font-size: 18px;
-  }
+    /* line 39, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+    h2 {
+        font-size: 18px;
+    }
 }
+
+
+/* line 49, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 
 .left-border {
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
 }
+
+
+/* line 54, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 
 .right-border {
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
+
+
+/* line 59, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 
 .clock-controls {
-  margin: 0 auto;
-  display: flex;
-  width: 100%;
-  flex-direction: row;
-  justify-content: space-around;
+    margin: 0 auto;
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-around;
 }
+
+
+/* line 67, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 
 .btn-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  margin: 0 auto;
-  width: 200px;
-  transition: all 1s;
-  -webkit-transition: all 1s;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 0 auto;
+    width: 200px;
+    transition: all 1s;
+    -webkit-transition: all 1s;
 }
+
 @media (max-width: 842px) {
-  .btn-container {
-    width: 100px;
-  }
+    /* line 67, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+    .btn-container {
+        width: 100px;
+    }
 }
+
+
+/* line 78, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+
 .btn-container input {
-  font-size: 44px;
-  text-align: center;
-  width: 80%;
-  height: 48px;
-  margin: 0;
-  border: none;
-  background-color: #606060;
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#7d7e7d+0,565656+100,7c7c7c+100 */
-  background: -moz-linear-gradient(top, #7d7e7d 0%, #565656 100%, #7c7c7c 100%);
-  /* FF3.6-15 */
-  background: -webkit-linear-gradient(top, #7d7e7d 0%, #565656 100%, #7c7c7c 100%);
-  /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom, #7d7e7d 0%, #565656 100%, #7c7c7c 100%);
-  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  color: white;
-  pointer-events: none;
-  transition: all 1s;
-  -webkit-transition: all 1s;
+    font-size: 44px;
+    text-align: center;
+    width: 80%;
+    height: 48px;
+    margin: 0;
+    border: none;
+    background-color: #606060;
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#7d7e7d+0,565656+100,7c7c7c+100 */
+    background: -moz-linear-gradient(top, #7d7e7d 0%, #565656 100%, #7c7c7c 100%);
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #7d7e7d 0%, #565656 100%, #7c7c7c 100%);
+    /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #7d7e7d 0%, #565656 100%, #7c7c7c 100%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    color: white;
+    pointer-events: none;
+    transition: all 1s;
+    -webkit-transition: all 1s;
 }
+
 @media (max-width: 842px) {
-  .btn-container input {
-    width: 50%;
-    height: 38px;
-    font-size: 22px;
-  }
+    /* line 78, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+    .btn-container input {
+        width: 50%;
+        height: 38px;
+        font-size: 22px;
+    }
 }
+
+
+/* line 105, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 
 .control-btns {
-  background-color: #28262f;
-  color: white;
-  font-size: 30px;
-  width: 70px;
-  height: 50px;
-  border: none;
-  transition: all 1s;
-  -webkit-transition: all 1s;
+    background-color: #28262f;
+    color: white;
+    font-size: 30px;
+    width: 70px;
+    height: 50px;
+    border: none;
+    transition: all 1s;
+    -webkit-transition: all 1s;
 }
+
+
+/* line 112, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+
 .control-btns:hover {
-  cursor: pointer;
+    cursor: pointer;
 }
+
+
+/* line 115, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+
 .control-btns:focus {
-  outline: none;
+    outline: none;
 }
+
 @media (max-width: 842px) {
-  .control-btns {
-    width: 40px;
-    height: 40px;
-    font-size: 15px;
-  }
+    /* line 105, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+    .control-btns {
+        width: 40px;
+        height: 40px;
+        font-size: 15px;
+    }
 }
+
+
+/* line 127, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 
 #master-btns {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
+
+
+/* line 133, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 
 #timer-toggle {
-  background-color: #28262f;
-  color: white;
-  font-size: 50px;
-  width: 60%;
-  height: 80px;
-  border: none;
-  border-bottom-left-radius: 10px;
-  border-right: solid 1px #151515;
-  border-bottom: 5px solid #161616;
-  text-shadow: 0px -2px #161616;
-  transition: all 1s;
-  -webkit-transition: all 1s;
-  transition: transform 0.1s;
-  -webkit-transition: -webkit-transform 0.1s;
+    background-color: #28262f;
+    color: white;
+    font-size: 50px;
+    width: 60%;
+    height: 80px;
+    border: none;
+    border-bottom-left-radius: 10px;
+    border-right: solid 1px #151515;
+    border-bottom: 5px solid #161616;
+    text-shadow: 0px -2px #161616;
+    transition: all 1s;
+    -webkit-transition: all 1s;
+    transition: transform 0.1s;
+    -webkit-transition: -webkit-transform 0.1s;
 }
+
+
+/* line 144, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+
 #timer-toggle:hover {
-  cursor: pointer;
+    cursor: pointer;
 }
+
+
+/* line 147, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+
 #timer-toggle:focus {
-  outline: none;
+    outline: none;
 }
+
+
+/* line 150, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+
 #timer-toggle:active {
-  transform: translate(0px, 0px);
-  -webkit-transform: translate(0px, 0px);
-  border-bottom: 0px solid;
+    transform: translate(0px, 0px);
+    -webkit-transform: translate(0px, 0px);
+    border-bottom: 0px solid;
 }
+
 @media (max-width: 842px) {
-  #timer-toggle {
-    font-size: 25px;
-  }
+    /* line 133, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+    #timer-toggle {
+        font-size: 25px;
+    }
 }
+
+
+/* line 164, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 
 #timer-reset {
-  background-color: #28262f;
-  color: white;
-  font-size: 50px;
-  width: 30%;
-  height: 80px;
-  border: none;
-  border-bottom-right-radius: 10px;
-  border-left: solid 1px #151515;
-  border-bottom: 5px solid #161616;
-  text-shadow: 0px -2px #161616;
-  transition: all 1s;
-  -webkit-transition: all 1s;
-  transition: transform 0.1s;
-  -webkit-transition: -webkit-transform 0.1s;
+    background-color: #28262f;
+    color: white;
+    font-size: 50px;
+    width: 30%;
+    height: 80px;
+    border: none;
+    border-bottom-right-radius: 10px;
+    border-left: solid 1px #151515;
+    border-bottom: 5px solid #161616;
+    text-shadow: 0px -2px #161616;
+    transition: all 1s;
+    -webkit-transition: all 1s;
+    transition: transform 0.1s;
+    -webkit-transition: -webkit-transform 0.1s;
 }
+
+
+/* line 175, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+
 #timer-reset:hover {
-  cursor: pointer;
+    cursor: pointer;
 }
+
+
+/* line 178, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+
 #timer-reset:focus {
-  outline: none;
+    outline: none;
 }
+
+
+/* line 181, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+
 #timer-reset:active {
-  transform: translate(0px, 0px);
-  -webkit-transform: translate(0px, 0px);
-  border-bottom: 0px solid;
+    transform: translate(0px, 0px);
+    -webkit-transform: translate(0px, 0px);
+    border-bottom: 0px solid;
 }
+
 @media (max-width: 842px) {
-  #timer-reset {
-    font-size: 25px;
-  }
+    /* line 164, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+    #timer-reset {
+        font-size: 25px;
+    }
 }
+
+
+/* line 195, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 
 #clock-container {
-  width: 90%;
-  margin: 0 auto;
-  margin-top: 30px;
-  padding-bottom: 20px;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  background-color: aquamarine;
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#cedbe9+0,aac5de+17,6199c7+50,3a84c3+51,419ad6+59,4bb8f0+71,3a8bc2+84,26558b+100;Blue+Gloss */
-  background: -moz-linear-gradient(top, #cedbe9 0%, #aac5de 17%, #6199c7 50%, #3a84c3 51%, #419ad6 59%, #4bb8f0 71%, #3a8bc2 84%, #26558b 100%);
-  /* FF3.6-15 */
-  background: -webkit-linear-gradient(top, #cedbe9 0%, #aac5de 17%, #6199c7 50%, #3a84c3 51%, #419ad6 59%, #4bb8f0 71%, #3a8bc2 84%, #26558b 100%);
-  /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom, #cedbe9 0%, #aac5de 17%, #6199c7 50%, #3a84c3 51%, #419ad6 59%, #4bb8f0 71%, #3a8bc2 84%, #26558b 100%);
-  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cedbe9', endColorstr='#26558b', GradientType=0);
-  /* IE6-9 */
+    width: 90%;
+    margin: 0 auto;
+    margin-top: 30px;
+    padding-bottom: 20px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    background-color: aquamarine;
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#cedbe9+0,aac5de+17,6199c7+50,3a84c3+51,419ad6+59,4bb8f0+71,3a8bc2+84,26558b+100;Blue+Gloss */
+    background: -moz-linear-gradient(top, #cedbe9 0%, #aac5de 17%, #6199c7 50%, #3a84c3 51%, #419ad6 59%, #4bb8f0 71%, #3a8bc2 84%, #26558b 100%);
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #cedbe9 0%, #aac5de 17%, #6199c7 50%, #3a84c3 51%, #419ad6 59%, #4bb8f0 71%, #3a8bc2 84%, #26558b 100%);
+    /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #cedbe9 0%, #aac5de 17%, #6199c7 50%, #3a84c3 51%, #419ad6 59%, #4bb8f0 71%, #3a8bc2 84%, #26558b 100%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cedbe9', endColorstr='#26558b', GradientType=0);
+    /* IE6-9 */
 }
+
+
+/* line 212, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+
 #clock-container h1 {
-  font-size: 120px;
-  text-shadow: none;
-  color: rgba(45, 45, 45, 0.9);
-  transition: all 1s;
-  -webkit-transition: all 1s;
+    font-size: 120px;
+    text-shadow: none;
+    color: rgba(45, 45, 45, 0.9);
+    transition: all 1s;
+    -webkit-transition: all 1s;
 }
+
 @media (max-width: 842px) {
-  #clock-container h1 {
-    font-size: 60px;
-  }
+    /* line 212, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+    #clock-container h1 {
+        font-size: 60px;
+    }
 }
+
+
+/* line 222, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+
 #clock-container p {
-  margin: 0;
-  font-size: 20px;
-  color: rgba(45, 45, 45, 0.9);
+    margin: 0;
+    font-size: 20px;
+    color: rgba(45, 45, 45, 0.9);
 }
+
+
+/* line 229, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 
 .fa-3x {
-  transition: all 1s;
-  -webkit-transition: all 1s;
+    transition: all 1s;
+    -webkit-transition: all 1s;
 }
+
 @media (max-width: 842px) {
-  .fa-3x {
-    font-size: 2em;
-  }
+    /* line 229, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+    .fa-3x {
+        font-size: 2em;
+    }
 }
+
+
+/* line 237, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 
 .animate {
-  transition: transform 0.1s;
-  -webkit-transition: -webkit-transform 0.1s;
+    transition: transform 0.1s;
+    -webkit-transition: -webkit-transform 0.1s;
 }
 
+
+/* line 242, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
+
 .black {
-  background-color: #28262f;
-  border-bottom: 5px solid #161616;
-  text-shadow: 0px -2px #161616;
+    background-color: #28262f;
+    border-bottom: 5px solid #161616;
+    text-shadow: 0px -2px #161616;
 }
+
+
+/* line 249, C:/Users/Zahra Nawazish/Desktop/Pomodoro Clock/styles.scss */
 
 .active,
 button:active {
-  transform: translate(0px, 0px);
-  -webkit-transform: translate(0px, 0px);
-  border-bottom: 0px solid;
+    transform: translate(0px, 0px);
+    -webkit-transform: translate(0px, 0px);
+    border-bottom: 0px solid;
 }
+
+
+/*# sourceMappingURL=styles.css.map */
